public/css/main.css
/* ... */
.green{
    stroke:green !important;
    color:green !important;
    border:1px solid green 
}
.uv-icon{
    height:1.4rem;
    padding: 0 0.5rem 0 0.7rem;
    border:none;
}
.uv{
    align-self: center;
    height:2.4rem;
    display:flex;
    align-items: center;
    font-size: 1.2rem;
    font-weight:600;
    background-color: rgba(255,255,255,0.2);
    border-radius: 12px;
    width: fit-content;
}
.uv p {
    padding-right: 1rem;
}
.uv-and-weather-emoji{
    display:flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.forecast{
    position: relative;
    display:flex;
    justify-content:space-between;
    background-color: rgba(255,255,255,0.1);
    border-radius: 16px;

    border: 1px solid rgba(255,255,255,0.3);
    overflow:hidden;
}
.today,
.tmrw,
.day-after-tmrw-container{
    width:100%;
    height: 11.0rem;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap:1rem;

    
}
.today,
.tmrw{

    border-right:1px solid rgba(255,255,255,0.3);

}
.today p,
.tmrw p,
.day-after-tmrw-container p{
    font-size: 1.4rem;
    color:rgba(255, 255 ,255 , 0.5);
}
.today p span,
.tmrw p span,
.day-after-tmrw-container p span{
    font-size: 1.4rem;
    color:rgba(255, 255 ,255 , 1);
    font-weight: 400;
}


.hourly-title{
    padding-bottom: 10px;
    color:rgba(255, 255 ,255 , 0.3);
    font-size: 1.6rem;
}


.hourly-forecast{
    display:flex;
    gap:1rem;
    overflow-x: auto;
    scrollbar-width: none;
}
.hour{
    width: 10rem;
    background-color: rgba(255,255,255,0.1);
    flex-shrink: 0;

    border:1px solid rgba(255,255,255,0.3);
    border-radius: 16px;

    display:flex;
    flex-direction: column;
    gap:1rem;
    align-items: center;
    justify-content:space-evenly;
}
.hourly-weather{
    height:32px;
    width:32px;
    flex-shrink: 0;
}
.precipitation-icon{
    height:16px;
    width:16px;
}
.precipitation{
    display:flex;
    gap:10px;
}

.hour p{
    font-size: 1.4rem;
    color:rgba(255, 255 ,255 , 0.5);
}
.hour p:first-child{
    padding-top: 10px;
}

.hour p:last-child{
    padding-bottom: 10px;

}
.hour p.hourly-temperature{
    color:rgba(255, 255 ,255 , 1);
    font-size: 1.6rem;
}


.other-details{
    display:grid;
    grid-template-columns: 1fr 1fr;
    background-color: rgba(255,255,255,0.1);
    border-radius: 16px;

    border: 1px solid rgba(255,255,255,0.3);
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
}
.details-grid{
    display:grid;
    grid-template-columns: 32px 1fr;
    column-gap: 1rem;
    padding:20px;

    border-top: 1px solid rgba(255,255,255,0.3);

}
.sunset,
.sunrise{
    border:none;
}
.details-grid:nth-child(odd){
    border-right: 1px solid rgba(255,255,255,0.3);
}
.details-text p:first-child{
    color: rgba(255,255,255,0.4);
}
.details-text p:last-child{
    font-size:1.6rem;
    color:rgba(255,255,255);
    font-weight: 700;
}
.details-icon{
    display:flex;
    align-items: center;
    justify-content: center;
    width:18px;
}
.uv-status{
    font-size: 1.4rem;
}
.other-details-icons{
    height:18px;
    width:18px;
}
.sunrise-icon path{
    stroke:rgba(255, 255, 0);
}
.sunset-icon path{
    stroke:#DEA161;
}
.uv-index path{
    fill:orange;
}
.high-low-icon path{
    stroke:#d39228;
}
.sky-icon path{
    stroke:#8ab0df;
}
.wind-icon path{
    stroke:#74a1d8;
}
.visibility-icon path{
    stroke:#7be7b8;
}



.selected-box{
    position: absolute;
    top:0;
    left:0;
    width: 166.666px;
    height: 140px;
    transition: transform 0.3s ease;

    background-color: rgba(255,255,255,0.2);
}

.expand-weather{
    height:10rem;
    width:10rem;
}




.rain{
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
    pointer-events:none;
    overflow:hidden;
}

.raindrop{

    position:absolute;

    top:-30px;

    width:2px;

    height:18px;

    background:linear-gradient(
        transparent,
        rgba(170,220,255,.9)
    );

    animation:rain linear infinite;
}

@keyframes rain{

    to{

        transform:translateY(var(--rain-distance));

    }

}



.snow{
    position:absolute;
    top:0;
    left:0;
    width:100%;
    pointer-events:none;
    overflow:hidden;
}

.snowflake{

    position:absolute;

    top:-20px;

    width:5px;

    height:5px;

    border-radius:50%;

    background:rgba(255, 255, 255, 0.6);

    animation:snow linear infinite;
}

@keyframes snow{

    to{

        transform:
            translateY(var(--snow-distance))
    }

}



.fog{

    position:absolute;

    inset:0;

    overflow:hidden;

    pointer-events:none;

}

.fog-layer{

    position:absolute;

    left:-60%;

    width:220%;

    height:70px;

    background:linear-gradient(
        90deg,
        transparent,
        rgba(255,255,255,.15),
        rgba(255,255,255,.35),
        rgba(255,255,255,.15),
        transparent
    );

    filter:blur(18px);

    opacity: 0;

    animation:
        fogFadeIn .8s ease forwards,
        fogMove 18s linear infinite;

}

@keyframes fogFadeIn{

    from{
        opacity:0;
    }

    to{
        opacity:1;
    }

}

@keyframes fogMove{

    from{

        transform:translateX(0);

    }

    to{

        transform:translateX(35%);

    }

}


.weather-effects{
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
    pointer-events:none;
    overflow:hidden;
    z-index:0;
}


.rain,
.snow,
.fog{
    opacity: 1;
    transition: opacity 0.6s ease;
}



.thunder{
    position:absolute;
    inset:0;
    pointer-events:none;
    overflow:hidden;
}

.thunder-flash{

    position:absolute;
    inset:0;

    background:#ffffff;

    opacity:0;
}

.lightning{
    position:absolute;

    width:160px;

    top:0;
    left:68%;

    fill: #E3F2FD;;

    opacity:0;

    z-index: 9999;   

    pointer-events:none;

    filter:
        drop-shadow(0 0 10px #ffffff)
        drop-shadow(0 0 25px #90caf9)
        drop-shadow(0 0 60px #2196f3);
}
/* ... */

